# AEGIS-Graduation-Project

./: .env  .gitignore  How to run.txt  README.md  docker-compose.yml  nginx.conf
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  Dockerfile.api  Dockerfile.consumer  Dockerfile.dashboard  Makefile  README.md  docker-compose.infra.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_all_tables.py  0002_play_integrity_columns.py  0003_integrity_verdict_nullable.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  kafka.py  logging_config.py  main.py  seed_demo.py  worker.py
backend/app/ai/: analyzer.py  chat.py
backend/app/api/: admin_ui.py  ai.py  chat.py  devices.py  enrollment_tokens.py  feedback.py  health.py  logs.py  payloads.py  router.py  telemetry.py
backend/app/auth/: bearer.py
backend/app/consumers/: __init__.py  entrypoint.py  risk_consumer.py  storage_consumer.py  telemetry_consumer.py
backend/app/models/: __init__.py  ai.py  enrollment.py  (+3 more)
backend/deploy/: Dockerfile.consumer  Dockerfile.dashboard
backend/migrations/: README.md
backend/scripts/: build_shieldy_vector_db.py  check_pipeline.py
backend/tests/: conftest.py  test_ai.py  test_api.py  test_e2e_flow.py  test_enrollment_tokens.py  test_health_endpoint.py  test_ingestion.py  test_kafka_consumer.py  test_logging_config.py  test_logs_pipeline.py  test_play_integrity.py  test_redis_rate_limiter.py  test_storage_risk_consumers.py  test_worker_and_risk.py
(+82094 files in other folders)
