[project]
name = "aegis-backend"
version = "0.1.0"
description = "AEGIS local backend MVP for telemetry, risk scoring, and AI audit stubs"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "SQLAlchemy>=2.0,<2.1",
    "psycopg[binary]>=3.2",
    "jsonschema",
    "pydantic",
    "alembic>=1.14,<2.0",
    "kafka-python>=2.0,<3.0",
    "redis>=5.0,<6.0",
    "qdrant-client>=1.11,<2.0",
    "pypdf>=4.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
